Update index.html with Font Awesome and image source
Added Font Awesome CDN link for icons and updated image source.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ashika Sherpa Portfolio</title>
+  <!-- Font Awesome CDN for GitHub Pages -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     * {
       box-sizing: border-box;
@@ -143,7 +145,6 @@
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -165,7 +166,7 @@
   <section id="about">
     <h2>About Me</h2>
     <div class="about-container">
-      <img src="myphoto.jpg" alt="Ashika Sherpa Photo">
+      <img src="https://raw.githubusercontent.com/<your-username>/<repo-name>/main/myphoto.jpg" alt="Ashika Sherpa Photo">
       <div class="about-text">
         <p>Hello World! I'm Ashika Sherpa from Nepal, the land of hills and flowing springs in the lap of the Himalayas. I have a passion for business, technology, and entrepreneurship. I aim to become an entrepreneur, enjoy life’s adventures, and continuously learn new things.</p>
         <p>My hobbies include writing poems and essays, reading, traveling, hiking, bike racing, learning Korean, programming, and chatting with ChatGPT.</p>
