--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <!-- Font Awesome CDN for GitHub Pages -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
+    * { box-sizing: border-box; scroll-behavior: smooth; }
     body {
       margin: 0;
       font-family: "Poppins", sans-serif;
@@ -24,14 +21,8 @@
       padding: 80px 20px;
       animation: fadeIn 1.5s ease;
     }
-    header h1 {
-      font-size: 3em;
-      margin: 0;
-    }
-    header p {
-      font-size: 1.2em;
-      margin-top: 10px;
-    }
+    header h1 { font-size: 3em; margin: 0; }
+    header p { font-size: 1.2em; margin-top: 10px; }
     nav {
       background-color: #ffb74d;
       text-align: center;
@@ -47,9 +38,7 @@
       font-weight: bold;
       transition: color 0.3s ease;
     }
-    nav a:hover {
-      color: #37474f;
-    }
+    nav a:hover { color: #37474f; }
     section {
       max-width: 900px;
       margin: 50px auto;
@@ -64,10 +53,7 @@
       padding-left: 10px;
       color: #37474f;
     }
-    ul {
-      list-style-type: square;
-      padding-left: 20px;
-    }
+    ul { list-style-type: square; padding-left: 20px; }
     .about-container {
       display: flex;
       align-items: center;
@@ -80,13 +66,8 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       transition: transform 0.3s;
     }
-    .about-container img:hover {
-      transform: scale(1.05);
-    }
-    .about-text {
-      flex: 1;
-      min-width: 250px;
-    }
+    .about-container img:hover { transform: scale(1.05); }
+    .about-text { flex: 1; min-width: 250px; }
     footer {
       background-color: #37474f;
       color: white;
@@ -95,7 +76,6 @@
       margin-top: 50px;
       border-top: 5px solid #ff80ab;
     }
-    /* Project & Assignment Sections */
     .project-section, .assignment-section {
       text-align: center;
       background: linear-gradient(135deg, #e1bee7, #b2ebf2);
@@ -135,7 +115,6 @@
       color: #00796b;
       font-weight: bold;
     }
-    /* Animations */
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -147,105 +126,108 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Hello, I'm Ashika Sherpa</h1>
-    <p>Bachelor's in Business (Integrated Business Management) at Dong-A University, Busan, South Korea</p>
-    <p><em>"I hear and I forget, I see and I remember, I do and I understand."</em></p>
-  </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#education">Education</a>
-    <a href="#experience">Experience</a>
-    <a href="#skills">Skills</a>
-    <a href="#project">Project</a>
-    <a href="#assignment">Assignment</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<header>
+  <h1>Hello, I'm Ashika Sherpa</h1>
+  <p>Bachelor's in Business (Integrated Business Management) at Dong-A University, Busan, South Korea</p>
+  <p><em>"I hear and I forget, I see and I remember, I do and I understand."</em></p>
+</header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <div class="about-container">
-      <img src="https://raw.githubusercontent.com/<your-username>/<repo-name>/main/myphoto.jpg" alt="Ashika Sherpa Photo">
-      <div class="about-text">
-        <p>Hello World! I'm Ashika Sherpa from Nepal, the land of hills and flowing springs in the lap of the Himalayas. I have a passion for business, technology, and entrepreneurship. I aim to become an entrepreneur, enjoy life’s adventures, and continuously learn new things.</p>
-        <p>My hobbies include writing poems and essays, reading, traveling, hiking, bike racing, learning Korean, programming, and chatting with ChatGPT.</p>
-      </div>
+<nav>
+  <a href="#about">About</a>
+  <a href="#education">Education</a>
+  <a href="#experience">Experience</a>
+  <a href="#skills">Skills</a>
+  <a href="#project">Project</a>
+  <a href="#assignment">Assignment</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+  <h2>About Me</h2>
+  <div class="about-container">
+    <!-- Replace with your actual GitHub hosted image -->
+    <img src="https://raw.githubusercontent.com/asheeee02/portfolio/main/myphoto.jpg" alt="Ashika Sherpa Photo">
+    <div class="about-text">
+      <p>Hello World! I'm Ashika Sherpa from Nepal, the land of hills and flowing springs in the lap of the Himalayas. I have a passion for business, technology, and entrepreneurship. I aim to become an entrepreneur, enjoy life’s adventures, and continuously learn new things.</p>
+      <p>My hobbies include writing poems and essays, reading, traveling, hiking, bike racing, learning Korean, programming, and chatting with ChatGPT.</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="education">
-    <h2>Education</h2>
-    <ul>
-      <li>High School: Science Faculty, Pokhara, Nepal (Graduated 2023)</li>
-      <li>Bachelor’s in Business (Integrated Business Management), Dong-A University, Busan, South Korea (Currently 2nd semester)</li>
-    </ul>
-  </section>
+<section id="education">
+  <h2>Education</h2>
+  <ul>
+    <li>High School: Science Faculty, Pokhara, Nepal (Graduated 2023)</li>
+    <li>Bachelor’s in Business (Integrated Business Management), Dong-A University, Busan, South Korea (Currently 2nd semester)</li>
+  </ul>
+</section>
 
-  <section id="experience">
-    <h2>Experience</h2>
-    <ul>
-      <li><strong>Family Business Assistant (Grocery Store & Local Restaurant)</strong> – Assisted with inventory, income/outcome calculations, and general operations.</li>
-      <li><strong>Part-time Teacher & Home Tutor</strong> – Taught students of grades 2, 9, and 12.</li>
-      <li><strong>Beauty Salon & Nail Technician Trainee</strong> – Completed training for practical skills in personal care services.</li>
-      <li><strong>Sales Girl & Store Manager (Clothing Store)</strong> – Gained experience in communication, negotiation, and marketing strategies.</li>
-    </ul>
-  </section>
+<section id="experience">
+  <h2>Experience</h2>
+  <ul>
+    <li><strong>Family Business Assistant (Grocery Store & Local Restaurant)</strong> – Assisted with inventory, income/outcome calculations, and general operations.</li>
+    <li><strong>Part-time Teacher & Home Tutor</strong> – Taught students of grades 2, 9, and 12.</li>
+    <li><strong>Beauty Salon & Nail Technician Trainee</strong> – Completed training for practical skills in personal care services.</li>
+    <li><strong>Sales Girl & Store Manager (Clothing Store)</strong> – Gained experience in communication, negotiation, and marketing strategies.</li>
+  </ul>
+</section>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>Business & Management: Entrepreneurship, business operations, marketing strategies.</li>
-      <li>Computer & Technology: MS Word, Excel, PowerPoint, HTML, Python, basic QBASIC & C, algorithms.</li>
-      <li>Other: Quick learner, problem-solving, tech-savvy.</li>
-    </ul>
-  </section>
+<section id="skills">
+  <h2>Skills</h2>
+  <ul>
+    <li>Business & Management: Entrepreneurship, business operations, marketing strategies.</li>
+    <li>Computer & Technology: MS Word, Excel, PowerPoint, HTML, Python, basic QBASIC & C, algorithms.</li>
+    <li>Other: Quick learner, problem-solving, tech-savvy.</li>
+  </ul>
+</section>
 
-  <section id="project" class="project-section">
-    <h2>🎯 Project</h2>
-    <div class="icon-cards">
-      <div class="icon-card">
-        <i class="fas fa-gamepad"></i>
-        <p><a href="https://aashiqua02.github.io/ashikaaaaa/Game3.html" target="_blank">Play Old Game</a></p>
-      </div>
-      <div class="icon-card">
-        <i class="fas fa-rocket"></i>
-        <p><a href="https://aashiqua02.github.io/ashikaaaaa/add.html" target="_blank">Play Improved Game</a></p>
-      </div>
-      <div class="icon-card">
-        <i class="fas fa-file-alt"></i>
-        <p><a href="https://docs.google.com/document/d/1j1olH_-MEVjwjwdap3196qTgHKd115HQLesDcZKysNw/edit?usp=sharing" target="_blank">View Google Doc</a></p>
-      </div>
+<section id="project" class="project-section">
+  <h2>🎯 Project</h2>
+  <div class="icon-cards">
+    <div class="icon-card">
+      <i class="fas fa-gamepad"></i>
+      <p><a href="https://aashiqua02.github.io/ashikaaaaa/Game3.html" target="_blank">Play Old Game</a></p>
     </div>
-  </section>
-
-  <section id="assignment" class="assignment-section">
-    <h2>📚 Assignment</h2>
-    <div class="icon-cards">
-      <div class="icon-card">
-        <i class="fas fa-code"></i>
-        <p><a href="https://colab.research.google.com/drive/1HzkvgVMsWGBU0y2vohE_xZKplUZSOtM6?usp=drive_link" target="_blank">Python Exercise</a></p>
-      </div>
-      <div class="icon-card">
-        <i class="fas fa-book-open"></i>
-        <p><a href="https://colab.research.google.com/drive/1o4aTMf8ZM7gVPsafYzvb7WZebTUuzJir?usp=drive_link" target="_blank">Self Learning</a></p>
-      </div>
-      <div class="icon-card">
-        <i class="fas fa-comments"></i>
-        <p><a href="https://chatgpt.com/share/6901f50a-0720-8011-8667-4029ab106721" target="_blank">T-S History</a></p>
-      </div>
+    <div class="icon-card">
+      <i class="fas fa-rocket"></i>
+      <p><a href="https://aashiqua02.github.io/ashikaaaaa/add.html" target="_blank">Play Improved Game</a></p>
     </div>
-  </section>
+    <div class="icon-card">
+      <i class="fas fa-file-alt"></i>
+      <p><a href="https://docs.google.com/document/d/1j1olH_-MEVjwjwdap3196qTgHKd115HQLesDcZKysNw/edit?usp=sharing" target="_blank">View Google Doc</a></p>
+    </div>
+  </div>
+</section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:sherpahasheekah002@gmail.com">sherpahasheekah002@gmail.com</a></p>
-    <p>Phone: 010-4636-9379</p>
-    <p>Instagram: <a href="https://www.instagram.com/asheeee02" target="_blank">@asheeee02</a></p>
-  </section>
+<section id="assignment" class="assignment-section">
+  <h2>📚 Assignment</h2>
+  <div class="icon-cards">
+    <div class="icon-card">
+      <i class="fas fa-code"></i>
+      <p><a href="https://colab.research.google.com/drive/1HzkvgVMsWGBU0y2vohE_xZKplUZSOtM6?usp=drive_link" target="_blank">Python Exercise</a></p>
+    </div>
+    <div class="icon-card">
+      <i class="fas fa-book-open"></i>
+      <p><a href="https://colab.research.google.com/drive/1o4aTMf8ZM7gVPsafYzvb7WZebTUuzJir?usp=drive_link" target="_blank">Self Learning</a></p>
+    </div>
+    <div class="icon-card">
+      <i class="fas fa-comments"></i>
+      <p><a href="https://chatgpt.com/share/6901f50a-0720-8011-8667-4029ab106721" target="_blank">T-S History</a></p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    &copy; 2025 Ashika Sherpa | All Rights Reserved 🌸
-  </footer>
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:sherpahasheekah002@gmail.com">sherpahasheekah002@gmail.com</a></p>
+  <p>Phone: 010-4636-9379</p>
+  <p>Instagram: <a href="https://www.instagram.com/asheeee02" target="_blank">@asheeee02</a></p>
+</section>
+
+<footer>
+  &copy; 2025 Ashika Sherpa | All Rights Reserved 🌸
+</footer>
+
 </body>
 </html>
