--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <section id="about">
   <h2>About Me</h2>
   <div class="about-container">
-    <img src="myphoto.jpg" alt="Ashika Sherpa Photo">
+    <img src="https://raw.githubusercontent.com/asheeee02/<repo-name>/main/myphoto.jpg" alt="Ashika Sherpa Photo">
     <div class="about-text">
       <p>Hello World! I'm Ashika Sherpa from Nepal, the land of hills and flowing springs in the lap of the Himalayas. I have a passion for business, technology, and entrepreneurship. I aim to become an entrepreneur, enjoy life’s adventures, and continuously learn new things.</p>
       <p>My hobbies include writing poems and essays, reading, traveling, hiking, bike racing, learning Korean, programming, and chatting with ChatGPT.</p>
