Add Projects section to portfolio
Updated the portfolio HTML structure to include a new 'Projects' section and modified the navigation links accordingly.

--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
       margin-top: 50px;
       border-top: 5px solid #ff80ab;
     }
-    /* Game On Section */
-    .game-section {
+    /* Projects Section */
+    .projects-section {
       text-align: center;
       background: linear-gradient(135deg, #e1bee7, #b2ebf2);
       border-radius: 15px;
       padding: 40px 20px;
     }
-    .game-section h2 {
+    .projects-section h2 {
       border: none;
       color: #212121;
       margin-bottom: 30px;
     }
-    .game-icons {
+    .project-icons {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
     }
-    .game-card {
+    .project-card {
       background: white;
       width: 220px;
       padding: 20px;
@@ -119,16 +119,16 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       transition: transform 0.3s, box-shadow 0.3s;
     }
-    .game-card:hover {
+    .project-card:hover {
       transform: translateY(-10px);
       box-shadow: 0 6px 16px rgba(0,0,0,0.2);
     }
-    .game-card i {
+    .project-card i {
       font-size: 40px;
       color: #ff80ab;
       margin-bottom: 10px;
     }
-    .game-card a {
+    .project-card a {
       text-decoration: none;
       color: #00796b;
       font-weight: bold;
@@ -157,7 +157,7 @@
     <a href="#education">Education</a>
     <a href="#experience">Experience</a>
     <a href="#skills">Skills</a>
-    <a href="#gameon">Game On</a>
+    <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -199,30 +199,30 @@
     </ul>
   </section>
 
-  <section id="gameon" class="game-section">
-    <h2>🎮 Game On</h2>
-    <div class="game-icons">
-      <div class="game-card">
+  <section id="projects" class="projects-section">
+    <h2>🚀 Projects</h2>
+    <div class="project-icons">
+      <div class="project-card">
         <i class="fas fa-code"></i>
         <p><a href="https://colab.research.google.com/drive/1HzkvgVMsWGBU0y2vohE_xZKplUZSOtM6?usp=drive_link" target="_blank">Python Exercise</a></p>
       </div>
-      <div class="game-card">
+      <div class="project-card">
         <i class="fas fa-book-open"></i>
         <p><a href="https://colab.research.google.com/drive/1o4aTMf8ZM7gVPsafYzvb7WZebTUuzJir?usp=drive_link" target="_blank">Self Learning</a></p>
       </div>
-      <div class="game-card">
+      <div class="project-card">
         <i class="fas fa-comments"></i>
         <p><a href="https://chatgpt.com/share/6901f50a-0720-8011-8667-4029ab106721" target="_blank">T-S History</a></p>
       </div>
-      <div class="game-card">
+      <div class="project-card">
         <i class="fas fa-gamepad"></i>
         <p><a href="https://aashiqua02.github.io/ashikaaaaa/Game3.html" target="_blank">Play Old Game</a></p>
       </div>
-      <div class="game-card">
+      <div class="project-card">
         <i class="fas fa-rocket"></i>
         <p><a href="https://aashiqua02.github.io/ashikaaaaa/add.html" target="_blank">Play Improved Game</a></p>
       </div>
-      <div class="game-card">
+      <div class="project-card">
         <i class="fas fa-file-alt"></i>
         <p><a href="https://docs.google.com/document/d/1j1olH_-MEVjwjwdap3196qTgHKd115HQLesDcZKysNw/edit?usp=sharing" target="_blank">View Google Doc</a></p>
       </div>
