--- a/ddtool.html
+++ b/ddtool.html
@@ -207,23 +207,30 @@
 
   function detectAnomalies() {
     let anomalyRows = [];
-    let normalRows = [];
+
+    // Pre-calculate stats for numeric columns
+    let stats = {};
+    headers.forEach(h => {
+      if (isNumericColumn(h)) {
+        const nums = rawData.map(r => parseFloat(r[h])).filter(v => !isNaN(v));
+        const mean = nums.reduce((a,b)=>a+b,0) / nums.length;
+        const sd = Math.sqrt(nums.reduce((a,b)=>a + Math.pow(b-mean,2),0) / nums.length);
+        stats[h] = { mean, sd };
+      }
+    });
 
     rawData.forEach(row => {
       let isAnomaly = false;
-
       headers.forEach(h => {
-        if (isNumericColumn(h)) {
-          const nums = rawData.map(r => parseFloat(r[h]));
-          const mean = nums.reduce((a,b)=>a+b,0)/nums.length;
-          const sd = Math.sqrt(nums.reduce((a,b)=>a+Math.pow(b-mean,2),0)/nums.length);
-          const z = (row[h] - mean) / sd;
-          if (Math.abs(z) >= 3) isAnomaly = true;
+        if (stats[h]) {
+          const value = parseFloat(row[h]);
+          if (!isNaN(value) && stats[h].sd !== 0) {
+            const z = (value - stats[h].mean) / stats[h].sd;
+            if (Math.abs(z) >= 3) isAnomaly = true;
+          }
         }
       });
-
       if (isAnomaly) anomalyRows.push(row);
-      else normalRows.push(row);
     });
 
     document.getElementById('totalCount').textContent = rawData.length;
