--- a/ddtool.html
+++ b/ddtool.html
@@ -106,11 +106,12 @@
   <div class="card">
     <h2>4. Anomalous Records (Z-Score Method)</h2>
     <p class="tooltip">
-      Records with |Z-score| ≥ 3 are considered anomalous. They are separated below for clear identification.
+      Rows with |Z-score| ≥ 3 are considered anomalous.
     </p>
     <p><b>Total Records:</b> <span id="totalCount">0</span></p>
     <p><b>Anomalous Records:</b> <span id="anomalyCount">0</span></p>
     <div id="anomalyTable"></div>
+  </div>
   </div>
   </div>
 
@@ -208,13 +209,13 @@
   function detectAnomalies() {
     let anomalyRows = [];
 
-    // Pre-calculate stats for numeric columns
+    // calculate mean and SD once per numeric column
     let stats = {};
     headers.forEach(h => {
       if (isNumericColumn(h)) {
-        const nums = rawData.map(r => parseFloat(r[h])).filter(v => !isNaN(v));
+        const nums = rawData.map(r => parseFloat(r[h]));
         const mean = nums.reduce((a,b)=>a+b,0) / nums.length;
-        const sd = Math.sqrt(nums.reduce((a,b)=>a + Math.pow(b-mean,2),0) / nums.length);
+        const sd = Math.sqrt(nums.reduce((a,b)=>a+Math.pow(b-mean,2),0) / nums.length);
         stats[h] = { mean, sd };
       }
     });
@@ -222,12 +223,9 @@
     rawData.forEach(row => {
       let isAnomaly = false;
       headers.forEach(h => {
-        if (stats[h]) {
-          const value = parseFloat(row[h]);
-          if (!isNaN(value) && stats[h].sd !== 0) {
-            const z = (value - stats[h].mean) / stats[h].sd;
-            if (Math.abs(z) >= 3) isAnomaly = true;
-          }
+        if (stats[h] && stats[h].sd !== 0) {
+          const z = (parseFloat(row[h]) - stats[h].mean) / stats[h].sd;
+          if (Math.abs(z) >= 3) isAnomaly = true;
         }
       });
       if (isAnomaly) anomalyRows.push(row);
